# Quad-LCA

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  lca_sanusha.yml  package.xml  run.sh  setup.py
.catkin_tools/profiles/default/: devel_collisions.txt
config/: params.yaml
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/.private/layered_quadrotor_control/: local_setup.sh  setup.sh
devel/lib/layered_quadrotor_control/: sync_msg
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  layered_quadrotor_control.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/layered_quadrotor_control/cmake/: layered_quadrotor_controlConfig-version.cmake  layered_quadrotor_controlConfig.cmake
logs/layered_quadrotor_control/: build.cmake.002.log.stderr  build.cmake.003.log.stderr
notebooks/: Inference.ipynb  Looking_at_data.ipynb  Testing_ICNN.ipynb  Testing_mlp.ipynb  testing_exp.ipynb  testing_func.ipynb
scripts/: exputils.py  inference_jax.py  load_split_bags.py  mav_planner_test.py  mlp_jax.py  model_learning.py  process_bags_inf.py  rotorpy_data.py  sim_data_jax.py  singletraj_inference.py  training.py
scripts/datagen/: hw_test_lissajous.py  lissajous_data.py  lissajous_data_0526.py  mav_hardware.py  traj_dragonfly2.py
scripts/learning/: model_learning.py
src/: mav_layer_interface.py
src/layered_quadrotor_control/: CMakeLists.txt  LICENSE  README.md  setup.py
src/layered_quadrotor_control/scripts/: mav_layer_interface.py
src/layered_quadrotor_control/scripts/datagen/: generate_data.py  hanli_lissajous.py  lissajous_data.py  lissajous_data_copy.py  mav_traj_data.py  mav_waypt_track_data.py  sim_data.py  traj_data.py  traj_dragonfly1.py
(+25 files in other folders)
