<?xml version="1.0"?>
<package format="2">
  <name>layered_ref_control</name>
  <version>0.0.0</version>
  <description>The layered_ref_control package</description>


  <maintainer email="sanusha@seas.upenn.edu">Anusha Srikanthan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>kr_mav_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>


  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kr_tracker_msgs</exec_depend>
  <exec_depend>kr_mav_manager</exec_depend>
  <exec_depend>kr_mav_msgs</exec_depend>

</package>
